--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
     grid-template-rows: auto 1fr auto;
 }
 header{
+    position: sticky;
+    top: 0;
+    z-index: 1;
     background-color: rgb(105, 25, 25);
     display: flex;
     align-items: center;
@@ -104,3 +107,4 @@ header{
     font-weight: bold;
     font-size: 1rem;
 }
+
